--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,13 +21,8 @@
 }
 
 a {
-	font-weight: 500;
-	color: #646cff;
 	text-decoration: inherit;
-}
-
-a:hover {
-	color: #535bf2;
+	color: inherit;
 }
 
 body {
@@ -66,12 +61,6 @@ button:focus-visible {
 	:root {
 		color: #213547;
 		background-color: #ffffff;
-	}
-	a:hover {
-		color: #747bff;
-	}
-	button {
-		background-color: #f9f9f9;
 	}
 }
 
